--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -12,6 +12,7 @@
 <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"/>
 </head>
 <body>
+<script type="text/xxx" id="bsConsoleBase">
 <style>
 #bsConsole{position:fixed;z-index:9999999;background:#eee;bottom:0;left:0;right:0;height:200px}
 #bsConsoleTab{height:20px;background:#666}
@@ -27,7 +28,7 @@
   <div id="bsConsoleViewConsole"></div>
   <div id="bsConsoleViewElement"></div>
 </div>
-
+</script>
 
 </body>
 </html>
