--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -53,6 +53,8 @@ var log = (function(){
     getId('bsConsoleViewConsole').innerHTML += v + '<br>';
   };
 })();
+
+log('test');
 </script>
 </body>
 </html>
