--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -24,7 +24,7 @@
 <style>
 #bsConsole{position:fixed;z-index:9999999;background:#eee;bottom:0;left:0;right:0;height:200px}
 #bsConsoleTab{height:20px;background:#666}
-#bsConsoleTabConsole, #bsConsoleTabElement{font-size:11px;line-height:20px;padding:0 5px;float:left;color:#fff;font-weight:bold}
+#bsConsoleTabConsole, #bsConsoleTabElement{background:#888;font-size:11px;line-height:20px;padding:0 5px;float:left;color:#fff;font-weight:bold}
 #bsConsoleViewConsole, #bsConsoleViewElement{overflow-y:scroll;font-size:10px;height:180px}
 #bsConsoleViewElement{display:none}
 </style>
