--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -90,7 +90,7 @@ var log = (function(){
     init();
     div = doc.createElement('div');
     div.style.clear = 'both';
-    div.style.backgroundColor = logColor == '#ccc' ? '#fff' : '#ccc';
+    div.style.backgroundColor = logColor = logColor == '#ccc' ? '#fff' : '#ccc';
     log = '';
     while(i < j){
       log += '<pre class="bsConsoleItem">' + a[i++] + '</pre>';
