--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -29,7 +29,7 @@
   float:left;color:#fff;font-weight:bold
 }
 #bsConsoleViewConsole, #bsConsoleViewElement{overflow-y:scroll;font-size:10px;height:180px}
-#bsConsoleViewElement{display:none}
+#bsConsoleViewElement{display:none;word-break:break-all;word-wrap:break-word}
 .bsConsoleItem{
   padding:0 3px;margin:3px;float:left;color:#000;border:1px solid #aaa
 }
@@ -84,13 +84,13 @@ var log = (function(){
       e.stopPropagation();
     });
   };
-  logColor = '#ccc';
+  logColor = '#ee5';
   return function(){
     var a = arguments, i = 0, j = a.length, div, log, v;
     init();
     div = doc.createElement('div');
     div.style.clear = 'both';
-    div.style.backgroundColor = logColor = logColor == '#ccc' ? '#fff' : '#ccc';
+    div.style.backgroundColor = logColor = logColor == '#ee5' ? '#fff' : '#ee5';
     log = '';
     while(i < j){
       v = a[i++];
