--- a/lession2/index.html
+++ b/lession2/index.html
@@ -24,35 +24,65 @@ getId = (function(){
 })();
 var context = getId('stage').getContext('2d');
 
-var Display = function(){};
-//override
-Display.prototype._path = function(){
-  throw '_path';
-};
-Display.prototype.makePath = (function(){
-  var cmd = [];
-  return function(context){
-    var i, j;
-    cmd.length = 0;
-    this._path(cmd);
-    i = 0, j = cmd.length;
-    context.beginPath();
-    while(i < j){
-      context[cmd[i++]].apply(context, cmd[i++]);
-    }
-    context.closePath();
+var Display = (function(){
+  var que = [];
+  var Display = function(){};
+  //override
+  Display.prototype._path = function(){
+    throw '_path';
   };
+  Display.prototype.makePath = (function(){
+    var cmd = [];
+    return function(context){
+      var i, j;
+      cmd.length = 0;
+      this._path(cmd);
+      i = 0, j = cmd.length;
+      que.push(context, 'beginPath', null);
+      while(i < j){
+        que.push(context, cmd[i++], cmd[i++]);
+      }
+      que.push(context, 'closePath', null);
+    };
+  })();
+  Display.prototype.stroke = function(context, r,g,b,a){
+    this.makePath(context);
+    que.push(
+      context, 'strokeStyle', 'rgba(' + [r,g,b,a].join(',') + ')'
+      context, 'stroke', null
+    );
+  };
+  Display.prototype.fill = function(context, r,g,b,a){
+    this.makePath(context);
+    que.push(
+      context, 'fillStyle', 'rgba(' + [r,g,b,a].join(',') + ')';
+      context, 'fill', null
+  };
+  Display.render = function(){
+      //[context1, method, arguments, context2, method, arguments,...]
+      var clearList = [], canvas, context, prop, param, i, j;
+      //clear each canvas
+      for(i = 0, j = que.length; i < j; i += 3){
+        if(clearList.indexOf(que[i]) == -1){
+          clearList.push(que[i]);
+          canvas = que[i].canvas;
+          que[i].clearRect(0, 0, canvas.width, canvas.height);
+        }
+      }
+      //render object
+      i = 0, j = que.length;
+      while(i < j){
+        context = que[i++];
+        prop = que[i++];
+        param = que[i++];
+        if(typeof context[prop] == 'function') context[prop].apply(context, param);
+        else context[prop] = param;
+      }
+      que.length = 0;
+    };
+  })();
+  return Display;
 })();
-Display.prototype.stroke = function(context, r,g,b,a){
-  this.makePath();
-  context.strokeStyle = 'rgba(' + [r,g,b,a].join(',') + ')';
-  context.stroke();
-};
-Display.prototype.fill = function(context, r,g,b,a){
-  this.makePath();
-  context.fillStyle = 'rgba(' + [r,g,b,a].join(',') + ')';
-  context.fill();
-};
 var Box = function(x, y, w, h){
   this.x = x;
   this.y = y;
@@ -102,13 +132,17 @@ var box1 = new Box(100,100, 20,20);
 var box2 = new Box(300,300, 50,50);
 
 //---------------------
-box1.fill(context, 255,0,0,1);
-box2.stroke(context, 0,0,255,1);
-//---------------------
-box1.x = 150;
-box2.y = 150;
-box1.fill(context, 0,255,0,1);
-//---------------------
+requestAnimationFrame(function loop(t){
+  var x, y;
+  box1.x = Math.random()*400 + 50;
+  box1.y = Math.random()*400 + 50;
+  box1.fill(context, 255,0,0,1);
+  box2.x = Math.random()*400 + 50;
+  box2.y = Math.random()*400 + 50;
+  box2.stroke(context, 0,0,255,1);
+  Display.render();
+  requestAnimationFrame(loop);
+});
 </script>
 </body>
 </html>
